fixed loading-spinner to not be too low

--- a/react-front-end/src/styles/Assessment.scss
+++ b/react-front-end/src/styles/Assessment.scss
@@ -11,7 +11,6 @@
 .button{
   display: flex;
   justify-content: center;
-  cursor:pointer;
 
   :hover {
     color:red;
