--- a/react-front-end/src/styles/Dashboard.scss
+++ b/react-front-end/src/styles/Dashboard.scss
@@ -154,7 +154,7 @@ h6 {
 .spinner-load {
   display: flex;
   justify-content: center;
-  margin-top: 30%;
+  margin-top: 35vh;
 }
 
 
